# siserv

./: MOCKUP.html  apidocs.md  app.md  backend_promtp.md  checkai.ipynb  codebase_backend.txt  codebase_frontend.txt  compile_backend.txt  compile_frontend.txt  compiler.py  dev.sh  doc.md  frontend_prompt.md  package-lock.json  promt.md  reset.sh  run.sh  test.py  testapi.py  vhosts.conf
backend/: .gitignore  admin copy.sql  admin.sql  codebase_backend.txt  createuser.sql  dropdb.sh  package-lock.json  requirements.txt  setupdatabase.sql  students.sql
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: admin.py  ai.py  auth.py  journals.py  notifications.py  progress.py
backend/app/services/: ai_service.py  context_agent.py
frontend/: .gitignore  backend_promtp.md  frontend_prompt.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.cg.js  vite.config.eg.js  vite.config.js  vite.config.test.js
frontend/src/: App.vue  style.css
frontend/src/components/: AIFeedbackCard.vue  ChatFeedbackCard.vue  CompletionMetricsChart.vue  ErrorDetailCard.vue  ImageCarousel.vue  ImageChatMessage.vue  ImageStack.vue  JournalCalendarView.vue  JournalCard.vue  ManualModal.vue  NotificationBell.vue  NotificationListModal.vue  NotificationModal.vue  ProgressSummaryCard.vue  TopicCard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: adminStore.js  aiStore.js  (+5 more)
gemini_api_client/: pyproject.toml
gemini_api_client/gemini_api_client/: __init__.py  client.py
(+26 files in other folders)
